package pt.ufp.info.esof.sgp.models;


import lombok.Getter;
import lombok.Setter;

@Getter
@Setter
public class Utilizador {
    private String nome;
}
