package pt.ufp.info.esof.sgp.models.enums;

public enum Cargo {
    DES_JUNIOR,
    ANALISTA_JUNIOR,
    DES_SENIOR,
    ANLISTA_SENIOR
}
