package pt.ufp.info.esof.sgp.models.enums;

public enum Estado {
    CONCLUIDA, // quando a tarefa tem 100 de percentualConclusao na tarefaAtual atribuido pelo Gestor
    ADIANTADA,
    ATRASADA,
    NORMAL,
    SEM_TAREFAS_SUBMETIDAS,
    TAREFA_NAO_ATRBUIDA
}
