@startuml
left to right direction

class Projeto{
	- nome:String
	- calcularDuracao()
	- calcularCusto()
	- calcularEstado()
}


class Utilizador{
    - nome:String
}

class Empregado{
	- cargo:Cargos
 	- incluirTempoDedicadoMin(tempo: int)
}


class Tarefa{
	- tempoEstimado:int
	- dataIniciacao:LocalDateTime
	+ getCustoTarefa()
}

class TarefaAtual{
	- tempoDedicadoMin:int 
	- percentualConclusao:double     
	- ultimaAtualizacao:LocalDateTime
}

enum Estados{
	ADIANTADO
	ATRASADO
	NORMAL
}

enum Cargos{
	DevJunior
	AnalistJunior
	DevSenior
	AnalistSenior
}

Empregado --|> Utilizador
Cliente --|> Utilizador
Tarefa "1" --- "1" TarefaAtual
Projeto "*" -- "1" Cliente
Tarefa "*" -- "1" Empregado
Projeto "1"  *-- "*" Tarefa

@enduml
